--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,8 +5,9 @@
   "license": "MIT",
   "scripts": {
     "start": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "prettier-watch": "onchange 'src/**/*.ts' -- prettier --write {{changed}}"
+    "prettier-watch": "onchange './**/*.ts' -- prettier --write {{changed}}",
+    "knex-migrations": "knex --knexfile knexfile.ts migrate:latest",
+    "knex-migrations-rollback": "knex --knexfile knexfile.ts migrate:rollback"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
